--- a/k8/bibinapp_deploy.yaml
+++ b/k8/bibinapp_deploy.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: bibinapp
   name: bibinapp
+  namespace: bibinapp
 spec:
   replicas: 1
   selector:
@@ -29,6 +30,7 @@ metadata:
   labels:
     app: bibinapp
   name: bibinapp
+  namespace: bibinapp
 spec:
   ports:
   - port: 8090
